# gestao-informacao-chao-de-fabrica--projeto-academico

./: .gitignore  Criterios de Avaliacao de LAPR4 v3.xlsx  NOMENCLATURA COMMITS.txt  Notas IMPORTANTES para o desenvolvimento.txt  Notas para desenvolvimento.txt  PERGUNTAS CLIENTE.txt  PERGUNTAS PROF.txt  README.md  Resumo EAPLI Effective Agreggate.txt  Resumo enunciado1.txt  SPRINT RETROSPECTIVE GUIDE.txt  T4.txt
SimuladorMaquina/: .build.sh.swp  CMakeLists.txt  Makefile  SimuladorMaquina  SimuladorMaquina.exe.stackdump  authentic-clients.pem  build.sh  build.txt  client1.key  client1.pem  cmake_install.cmake  main.c  run.sh  ssl.cnf.template
SimuladorMaquina/Certificados/: client2.key  client2.pem  client3.key  client3.pem  client4.key  client4.pem  make_certs  server.key  server.pem
SimuladorMaquina/Mensagens/: Exemplo 1.txt  MensagensShort.T3
SimuladorMaquina/base/consola/: main.c
SimuladorMaquina/base/core/boostrap/: boostrap.c  boostrap.h
SimuladorMaquina/base/core/boot/: boot.c  boot.h
SimuladorMaquina/base/core/comunicacao/: comunicar.c  comunicar.h  envio_mensagens_carregadas.c  envio_mensagens_carregadas.h  informacao_comunicacao.h
SimuladorMaquina/base/core/gestaoinformacao/: Dados.c  Dados.h
SimuladorMaquina/base/core/maquina/: informacao_maquina.h
SimuladorMaquina/base/core/mensagem/: carregamento_mensagem.c  carregamento_mensagem.h  gestor_mensagem.c  gestor_mensagem.h
SimuladorMaquina/base/core/shutdown/: shutdown.c  (+1 more)
SimuladorMaquina/test/: Makefile  a.out  tcp_server.c  tls.c  udp-server.c  udp_cli.c  udp_client.c  udp_client.h
(+1078 files in other folders)
